plugins {
	id 'java'
	id "com.github.johnrengelman.shadow" version "6.1.0"
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
	}
	mavenCentral()
}

def runeLiteVersion = '1.8.17'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.22'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'

	testImplementation 'junit:junit:4.13.2'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

group = 'com.highlight'
version = '1.0-SNAPSHOT'
sourceCompatibility = '1.8.17'

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

shadowJar {
	from sourceSets.test.output
	configurations = [project.configurations.testRuntimeClasspath]
	manifest {
		attributes "Main-Class": "com.highlight.PluginTest"
	}
}
